# PicturePerfect

./: CMakeLists.txt  Camera.cpp  Camera.h  CustomGraphicsScene.cpp  CustomGraphicsScene.h  Filter.cpp  Filter.h  Photos.cpp  Photos.h  README.md  eye_color.cpp  eye_color.h  eyes.cpp  eyes.h  frameCapture.cpp  frameCapture.h  functionFilter.cpp  functionFilter.h  imageExport.h  imageToMat.cpp  imageToMat.h  imageToQImage.cpp  imageToQImage.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  vcpkg.json
Mediapipe/: BUILD  iris_tracking.cpp  iris_tracking.hpp  main.cpp
Opencv-Background-Subtraction-Without-AI-main 2/: README.md  main.cpp
